# tibia-imgui-map-editor

./: .gitignore  AGENTS.MD  build_ninja.bat  skills-lock.json
.agents/skills/code-review/: SKILL.md
.agents/skills/imgui-best-practices/: DECISION_GUIDE.md  DEPRECATED.md  DESIGN_PATTERNS.md  SKILL.md  UI_DESIGN.md
.gemini/: styleguide.md
.github/ISSUE_TEMPLATE/: config.yml  new-feature.yml
.github/actions/run-gemini-cli/: action.yml
.github/actions/run-gemini-cli/.github/commands/: gemini-invoke.toml  gemini-scheduled-triage.toml  gemini-triage.toml
.github/workflows/: build.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml
.opencode/plans/: client-config-rewrite.md
ImguiMapEditor/: Application.cpp  Application.h  BUILD.md  CMakeLists.txt  CMakePresets.json  Pch.h  clients.json  clients_templates.json
ImguiMapEditor/Application/: CallbackMediator.cpp  CallbackMediator.h  MapOperationHandler.cpp  MapOperationHandler.h  MapTabManager.h
ImguiMapEditor/Application/Frame/: RenderOrchestrator.cpp  RenderOrchestrator.h
ImguiMapEditor/Controllers/: HotkeyController.cpp  SearchController.cpp  SearchController.h  StartupController.cpp  StartupController.h  WorkspaceController.cpp
ImguiMapEditor/Core/: Config.h
ImguiMapEditor/Domain/: ChunkedMap.cpp  ChunkedMap.h  ClientVersion.cpp  ClientVersion.h  ClientVersionTypes.h  HotkeyActionIds.h  HotkeyDefinitions.h  ICoordinateTransformer.h  ItemType.h  SelectionSettings.h
ImguiMapEditor/IO/: HotkeyJsonReader.cpp  HotkeyJsonReader.h  MaterialsXmlReader.h  PaletteXmlReader.h  SprReader.cpp  TilesetXmlReader.cpp
ImguiMapEditor/IO/Readers/: DatReaderBase.cpp  DatReaderBase.h
ImguiMapEditor/Input/: Hotkeys.h
ImguiMapEditor/Presentation/: MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h
ImguiMapEditor/Presentation/Dialogs/: ClientConfigurationController.cpp  ClientConfigurationController.h
ImguiMapEditor/Rendering/Animation/: AnimationTicks.h  ItemAnimation.cpp  ItemAnimation.h
ImguiMapEditor/Rendering/Map/: TileRenderer.cpp
ImguiMapEditor/Rendering/Minimap/: MinimapRenderer.cpp  MinimapRenderer.h
ImguiMapEditor/Rendering/Overlays/: SelectionOverlay.cpp  SelectionOverlay.h  StatusOverlay.cpp  StatusOverlay.h
ImguiMapEditor/Rendering/Resources/: TextureAtlas.cpp
ImguiMapEditor/Rendering/Tile/: CreatureRenderer.cpp  CreatureRenderer.h  ItemRenderer.cpp  ItemRenderer.h
ImguiMapEditor/Services/: AppSettings.cpp  AppSettings.h  ClientAssetDetector.cpp  ClientAssetDetector.h  ClientDataService.cpp  ClientDataService.h  ClientSignatureDetector.cpp  ClientSignatureDetector.h  ClientVersionPersistence.cpp  ClientVersionPersistence.h  ClientVersionRegistry.cpp  ClientVersionRegistry.h  ClientVersionValidator.cpp  ConfigService.cpp  ConfigService.h  CreatureSpriteService.h  HotkeyRegistry.cpp  HotkeyRegistry.h  ItemCompositor.cpp  ItemCompositor.h  RecentLocationsService.cpp  RecentLocationsService.h  SettingsRegistry.cpp  SpriteAsyncLoader.h  SpriteManager.cpp  SpriteManager.h  ViewSettings.cpp
ImguiMapEditor/Services/Map/: MapLoadingService.cpp  MapLoadingService.h
ImguiMapEditor/UI/: PreferencesDialog.cpp  PreferencesDialog.h
ImguiMapEditor/UI/Core/: Theme.h
ImguiMapEditor/UI/Dialogs/: AdvancedSearchDialog.cpp  AdvancedSearchDialog.h  ConfirmationDialog.cpp  EditTownsDialog.cpp  EditTownsDialog.h  MapCompatibilityPopup.cpp  NewMapDialog.cpp  NewMapDialog.h  UnsavedChangesModal.cpp
ImguiMapEditor/UI/Dialogs/ClientConfiguration/: ClientConfigurationDialog.cpp  ClientConfigurationDialog.h  ClientPropertyEditor.cpp  ClientPropertyEditor.h
ImguiMapEditor/UI/Dialogs/Properties/: ItemPropertiesDialog.cpp  MapPropertiesDialog.cpp  MapPropertiesDialog.h
ImguiMapEditor/UI/Dialogs/Startup/: AvailableClientsPanel.cpp  AvailableClientsPanel.h  ClientInfoPanel.cpp  RecentMapsPanel.cpp  SelectedMapPanel.cpp  StartupDialog.cpp  StartupDialog.h
ImguiMapEditor/UI/Map/: MapPanel.h  MapViewCamera.cpp  MapViewCamera.h
ImguiMapEditor/UI/Panels/: BrushSizePanel.cpp  MapPropertiesPanel.cpp  MapPropertiesPanel.h  NewMapPanel.cpp  NewMapPanel.h  OpenSecPanel.cpp  OpenSecPanel.h
ImguiMapEditor/UI/Ribbon/Panels/: ThemePanel.cpp
ImguiMapEditor/UI/Ribbon/Utils/: RibbonUtils.h
ImguiMapEditor/UI/Utils/: PreviewUtils.cpp  PreviewUtils.hpp
ImguiMapEditor/UI/Widgets/: SearchResultsWidget.cpp  SearchResultsWidget.h  TilesetGridWidget.cpp  TilesetGridWidget.h  TilesetWidget.cpp
ImguiMapEditor/UI/Widgets/Properties/: PropertyPanelRenderer.cpp
ImguiMapEditor/UI/Windows/: IngameBoxWindow.cpp  MinimapWindow.cpp
ImguiMapEditor/UI/Windows/BrowseTile/: BrowseTileWindow.cpp  ItemsListRenderer.cpp  SpawnCreatureRenderer.cpp
ImguiMapEditor/Utils/: SpriteUtils.cpp  SpriteUtils.h
